--- a/content.tex
+++ b/content.tex
@@ -83,33 +83,35 @@ data are public, hence after performing a research in dataset search engines, su
 Dataverse\,\cite{crosas2011dataverse} or Google Dataset
 Search\footnote{https://toolbox.google.com/datasetsearch},
 we found the information we needed, openly available. However, experiments involving \ac{ml} models
-over large datasets are time consuming and expensive to run. Then the main
-challenges for open research data in \ac{ml} are the lack of time and the cost of sharing data.
-
-%todo: show which data are not shared --> then claim why in the conclusion
-
-%todo: add also source code and ML tuning parameters
-%todo: enhance the key point of this section: ehnance a search on research data and show the main challenges for sharing research data
-
-% sharing of public health research data has potential to advance scientific progress but may present challenges to the interests of research stakeholders, particularly in low-to-middle income countries\,\cite{jao2015involving}
-
-% Regulatory agencies are generally obligated to protect the commercial value of the data collected by companies\,\cite{national2016principles}.
-
-%todo: insert this --> closed models or data can slow down the scientific process, hence the progress
-
-%todo: check on google datasets search
+over large datasets are time consuming and expensive to run. We derive that the main
+challenges for publishing open research data in \ac{ml} are the excessive time for training and
+depositing big data, and the costs of running experiments to produce results and validation set.
 
 \section{Conclusions}
+We agree that open science is beneficial in order to conduct good scientific research,
+and we have seen that to have full reproducibility in \ac{ml}, research data must be open.
+To speed up the scientific process, it is fundamental to make available also bad data samples, even if
+they are often evicted from the final presented work.
+However, even with open data, infrastructure costs and lack of time can hinder reproducibility.
+Encouraging the use of open research data is not enough for a good use of it. For each subject of study,
+there should be national guidelines to assist researchers in warranted methods for open research data.
+Furthermore, we believe that open science methodology and approaches should
+be part of the young researchers' curriculum.
+
+%Open science methodology should also be part of the curriculum for young researchers.
 % especially in \ac{cs} and \ac{ml} we believe that reproducibility in science is the key value that should enable data and source code to be shared. Data need to be shared if results want to be reproduced, hence confirm the scientific discovery
-Furthermore, regulatory agencies are generally obligated to protect the commercial
+Even if openness of research data will speed up the scientific process,
+while enabling reproducibility, there are still many cases where openness is not
+possible. For instance, regulatory agencies are generally obligated to protect the commercial
 value of the data collected by companies\,\cite{national2016principles}.
+Information contained in datasets should also comply with the normative on privacy preserving,
+and data anonymization is often recommended. Furthermore, scientific researches
+commissioned by private companies will benefit in keeping secrecy on their research data.
 
-Reproduce a \ac{ml} experiment needs also the complete dataset, from the raw data to the
-training, test, and validation set, and 
-%todo: some data are sensitive and needs to be preserved and protected.
-
-% todo: talk about privacy online and how open access can affect the resarch or reserachers in certain fileds
-%todo: different open science schools\,\cite{Fecher2014}
+Finally, we think that is preferable, for the sake of science and progress, to keep an high
+level of openness. Disciplines such as \ac{ml} should be transparent concerning source code
+and research data. We have shown that closed models or data, can slow
+down the scientific process, hence the progress.
 
 %\newpage
 % Bibliography
