--- a/content.tex
+++ b/content.tex
@@ -5,7 +5,7 @@ Before the advent of scientific journals,
 science was more oriented towards a closed approach, so that only a restricted number
 of people could have access to it.
 Many scientists, including Galileo, Newton, Kepler, and Hooke, made their discoveries into
-something they could profit, and often papers were even encoded in anagrams.
+something they could profit, and often the manuscripts were even encoded in anagrams.
 Following this closed science logic, it was difficult
 to identify scientific priority of research discoveries, like for instance the
 debate on whom first discovered calculus between Leibniz and Newton.
@@ -15,7 +15,7 @@ and technology has solved scientific priority issue to a certain extent.
 Many scientists are in favor of open science, for instance
 Merton argues that knowledge-creation is more efficient if scientists work together, and
 it is morally binding on a professional scientist\,\cite{merton1942science}.
-However, there exists research data, journals, and papers which are not openly accessible.
+However, there exist research data, journals, and papers which are not openly accessible.
 In some cases research data is not available due to privacy concerns.
 Research data collected by for-profit organizations is held in secrecy, for
 safeguarding commercial interests.
@@ -23,9 +23,9 @@ Furthermore, pay-walled journals limit access of scientific publications.
 All this hinders the propagation of open science.
 
 %go from reproducibility to physics then cs and then machine learning, and stick with it!
-Besides seeking knowledge, science needs also to constantly proof itself
+Besides seeking knowledge, science needs also to constantly prove itself
 to be right, hence it needs to be \emph{reproducible}. 
-In sixteenth and seventeenth centuries, scientists such as Newton or Galileo could guarantee
+In the sixteenth and seventeenth centuries, scientists such as Newton or Galileo could guarantee
 reproducibility in physics by using mathematical formulas.
 %
 In the late twentieth century, in the field of \ac{cs},
@@ -58,7 +58,7 @@ In \ac{ml}, these specifications include tuning parameters for statistical model
 which result to be crucial for reproducibility. Furthermore, tuning parameters
 is a very sensitive issue both in practical applications and in academic studies\,\cite{birattari2004problem}.
 
-Besides there are still many published researches outside the field of \ac{ml} which cannot be
+Besides there are still many published research outside the field of \ac{ml} which cannot be
 reproduced\,\cite{begley2012drug, begley2015reproducibility, prinz2011believe},
 the degree of openness that \ac{ml} requires in order to have a reproducible research, is making
 transparency and open science a key point for reproducibility.
@@ -75,7 +75,7 @@ Our interest in this manuscript relies on research data, and \ac{ml} does not on
 To be fully reproducible, the research needs to share also \emph{training data}, \emph{validation data},
 \emph{test data}, and \emph{results}. The same survey from
 Grundesen\,\cite{gundersen2018state}, conducted on papers from \ac{ijcai} and \ac{aaai}, enhanced that
-only the training set was shared by the majority, with a score of $56\%$, while test, validation and results
+only the training set was shared by the majority, with a score of $56\%$, while test, validation and the results
 got respectively a low score of $30\%$, $16\%$, and $4\%$.
 
 Being blockchain technology and cryptocurrencies our domain,
@@ -84,14 +84,14 @@ Dataverse\,\cite{crosas2011dataverse} or Google Dataset
 Search\footnote{https://toolbox.google.com/datasetsearch},
 we found the information we needed, openly available. However, experiments involving \ac{ml} models
 over large datasets are time consuming and expensive to run. We derive that the main
-challenges for publishing open research data in \ac{ml} are the excessive time for training and
-depositing big data, and the costs of running experiments to produce results and validation set.
+challenges of publishing open research data in \ac{ml} are the excessive time for training and
+depositing big data, and the costs of running experiments to produce results and validation sets.
 
 \section{Conclusions}
 We agree that open science is beneficial in order to conduct good scientific research,
 and we have seen that to have full reproducibility in \ac{ml}, research data must be open.
 To speed up the scientific process, it is fundamental to make available also bad data samples, even if
-they are often evicted from the final presented work.
+they are often evicted from the research data published.
 However, even with open data, infrastructure costs and lack of time can hinder reproducibility.
 Encouraging the use of open research data is not enough for a good use of it. For each subject of study,
 there should be national guidelines to assist researchers in warranted methods for open research data.
@@ -100,15 +100,15 @@ be part of the young researchers' curriculum.
 
 %Open science methodology should also be part of the curriculum for young researchers.
 % especially in \ac{cs} and \ac{ml} we believe that reproducibility in science is the key value that should enable data and source code to be shared. Data need to be shared if results want to be reproduced, hence confirm the scientific discovery
-Even if openness of research data will speed up the scientific process,
+Even if the openness of research data will speed up the scientific process,
 while enabling reproducibility, there are still many cases where openness is not
 possible. For instance, regulatory agencies are generally obligated to protect the commercial
 value of the data collected by companies\,\cite{national2016principles}.
 Information contained in datasets should also comply with the normative on privacy preserving,
 and data anonymization is often recommended. Furthermore, scientific researches
-commissioned by private companies will benefit in keeping secrecy on their research data.
+commissioned by private companies will benefit in keeping the secrecy on their research data.
 
-Finally, we think that is preferable, for the sake of science and progress, to keep an high
+Finally, we think that is preferable, for the sake of science and progress, to keep a high
 level of openness. Disciplines such as \ac{ml} should be transparent concerning source code
 and research data. We have shown that closed models or data, can slow
 down the scientific process, hence the progress.
