--- a/bibliography.bib
+++ b/bibliography.bib
@@ -640,3 +640,10 @@ isbn      = {978-82-7682-056-0}
 	pages={v1},
 	year={2018}
 }
+
+@book{nielsen2011reinventing,
+	title={Reinventing discovery: the new era of networked science},
+	author={Nielsen, Michael},
+	year={2011},
+	publisher={Princeton University Press}
+}
