--- a/content.tex
+++ b/content.tex
@@ -2,10 +2,10 @@
 %todo: talk about main difficulties in open research data in our field
 %todo: IDENTIFY these difficulties
 Before the advent of scientific journals,
-science was more oriented towards a closed approach, so that only a restricted number
-of people could have access to it.
+science was more oriented towards a closed approach\,\cite{nielsen2011reinventing},
+so that only a restricted number of people could have access to it.
 Many scientists, including Galileo, Newton, Kepler, and Hooke, made their discoveries into
-something they could profit, and often the manuscripts were even encoded in anagrams.
+something they could profit, and often the manuscripts were even encoded in anagrams\,\cite{nielsen2011reinventing}.
 Following this closed science logic, it was difficult
 to identify scientific priority of research discoveries, like for instance the
 debate on whom first discovered calculus between Leibniz and Newton.
@@ -31,8 +31,8 @@ reproducibility in physics by using mathematical formulas.
 In the late twentieth century, in the field of \ac{cs},
 \emph{pseudo code}\footnote{pseudo code is the logic or abstraction which explains algorithms.}
 helped reproducibility.
-
 In twenty-first century, \ac{ml} rapidly gained popularity\,\cite{mjolsness2001machine}.
+
 \ac{ml} relies on new techniques based on big data analysis and statistical inference.
 With \ac{ml} it is possible to train machines to solve particular tasks without being
 given specific instructions.
@@ -71,8 +71,9 @@ conducted in other conferences, out of $400$ algorithms presented,
 $54\%$ included pseudo code, $30\%$ included test data, and only the $6\%$
 included the source code.
 
-Our interest in this manuscript relies on research data, and \ac{ml} does not only require the raw dataset.
-To be fully reproducible, the research needs to share also \emph{training data}, \emph{validation data},
+Our interest in this manuscript relies on research data, and \ac{ml} does not only require the raw dataset
+to be reproducible.
+Hence, the research needs to share also \emph{training data}, \emph{validation data},
 \emph{test data}, and \emph{results}. The same survey from
 Grundesen\,\cite{gundersen2018state}, conducted on papers from \ac{ijcai} and \ac{aaai}, enhanced that
 only the training set was shared by the majority, with a score of $56\%$, while test, validation and the results
@@ -93,7 +94,7 @@ and we have seen that to have full reproducibility in \ac{ml}, research data mus
 To speed up the scientific process, it is fundamental to make available also bad data samples, even if
 they are often evicted from the research data published.
 However, even with open data, infrastructure costs and lack of time can hinder reproducibility.
-Encouraging the use of open research data is not enough for a good use of it. For each subject of study,
+Encouraging the use of open research data is not enough to ensure a good use of it. For each subject of study,
 there should be national guidelines to assist researchers in warranted methods for open research data.
 Furthermore, we believe that open science methodology and approaches should
 be part of the young researchers' curriculum.
