--- a/content.tex
+++ b/content.tex
@@ -74,7 +74,9 @@ included the source code.
 Our interest in this manuscript relies on research data, and \ac{ml} does not only require the raw dataset
 to be reproducible.
 Hence, the research needs to share also \emph{training data}, \emph{validation data},
-\emph{test data}, and \emph{results}. The same survey from
+\emph{test data}, and \emph{results}. Furthermore, in order to speed up the scientific process,
+in \ac{ml} is fundamental to publish also the bad data samples. In this way scientists know already what is
+ought to be done or not, during the training process. In the survey from
 Grundesen\,\cite{gundersen2018state}, conducted on papers from \ac{ijcai} and \ac{aaai}, enhanced that
 only the training set was shared by the majority, with a score of $56\%$, while test, validation and the results
 got respectively a low score of $30\%$, $16\%$, and $4\%$.
@@ -88,14 +90,15 @@ over large datasets are time consuming and expensive to run. We derive that the 
 challenges of publishing open research data in \ac{ml} are the excessive time for training and
 depositing big data, and the costs of running experiments to produce results and validation sets.
 
-\section{Conclusions}
+\section{Conclusion}
 We agree that open science is beneficial in order to conduct good scientific research,
-and we have seen that to have full reproducibility in \ac{ml}, research data must be open.
-To speed up the scientific process, it is fundamental to make available also bad data samples, even if
+and to have full reproducibility in \ac{ml}, research data must be open.
+It is also beneficial to make bad data samples available, even if
 they are often evicted from the research data published.
 However, even with open data, infrastructure costs and lack of time can hinder reproducibility.
-Encouraging the use of open research data is not enough to ensure a good use of it. For each subject of study,
-there should be national guidelines to assist researchers in warranted methods for open research data.
+Encouraging the use of open research data is not enough. For each subject of study,
+there should be clear and concise guidelines to assist researchers in warranted methods for
+the use of open research data.
 Furthermore, we believe that open science methodology and approaches should
 be part of the young researchers' curriculum.
 
@@ -103,16 +106,14 @@ be part of the young researchers' curriculum.
 % especially in \ac{cs} and \ac{ml} we believe that reproducibility in science is the key value that should enable data and source code to be shared. Data need to be shared if results want to be reproduced, hence confirm the scientific discovery
 Even if the openness of research data will speed up the scientific process,
 while enabling reproducibility, there are still many cases where openness is not
-possible. For instance, regulatory agencies are generally obligated to protect the commercial
-value of the data collected by companies\,\cite{national2016principles}.
+possible.
 Information contained in datasets should also comply with the normative on privacy preserving,
 and data anonymization is often recommended. Furthermore, scientific researches
-commissioned by private companies will benefit in keeping the secrecy on their research data.
-
-Finally, we think that is preferable, for the sake of science and progress, to keep a high
-level of openness. Disciplines such as \ac{ml} should be transparent concerning source code
-and research data. We have shown that closed models or data, can slow
-down the scientific process, hence the progress.
+commissioned by private companies are obligated to protect the commercial value
+of research data.
+Disciplines such as \ac{ml} shall be transparent concerning source code
+and research data. We have discussed that closed models or data, can slow
+down the scientific progress.
 
 %\newpage
 % Bibliography
